# self-orbit

./: .editorconfig  .gitignore  AGENTS.md  Dockerfile.warp-env  README.md  docker-compose.yml  nx.json  package-lock.json  package.json
ai-infrastructure/: .env.example  Dockerfile  project.json  pyproject.toml  requirements-dev.txt  requirements.txt
ai-infrastructure/app/: __init__.py  main.py
ai-infrastructure/app/api/: __init__.py  routes.py
ai-infrastructure/app/core/: __init__.py  config.py  exceptions.py  logging.py
ai-infrastructure/app/grpc/: __init__.py  interceptors.py  server.py
ai-infrastructure/app/grpc/handlers/: __init__.py  expense_handler.py  journal_handler.py  task_handler.py
ai-infrastructure/app/models/: __init__.py  schemas.py
ai-infrastructure/app/pipelines/: __init__.py  base.py  expense_pipeline.py  task_pipeline.py
ai-infrastructure/app/services/: __init__.py  expense_parser.py  summarization_service.py  task_parser.py  transcription_service.py
ai-infrastructure/tests/: conftest.py  test_api_routes.py  test_expense_parser.py  test_expense_pipeline.py  test_grpc_expense_handler.py  test_grpc_journal_handler.py  test_grpc_task_handler.py  test_summarization_service.py  test_task_parser.py  test_task_pipeline.py  test_transcription_service.py
backend/: Directory.Packages.props  SelfOrbit.sln
docs/: architecture.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
k8s/: ai-infrastructure.yaml  backend-services.yaml  gateway-frontend.yaml  namespace.yaml  postgres.yaml  secrets.yaml.template
(+114 files in other folders)
